--- a/index.html
+++ b/index.html
@@ -25,56 +25,136 @@
                 <li>კონტაქტი</li>
             </ul>
         </nav>
-        <div class="container1">
-            <img class="banner" src="src.img/Keti.jpeg">
-        </div>
-        <section class="mt-120">
+        <div class="banner">
             <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <div class="image-container">
-                            <img src="src.img/html.png">
+                <h2 class="banner-name mt-5">
+                    IT Project Management
+                </h2>
+                <p class="person-name mt-5">
+                    ნინო გიორგაძე
+                </p>
+                <button class="btn mt-5">
+                    კურსის ჩვენება
+                </button>
+            </div>
+        </div>
+        <div class="satauri">
+            <div class="kursebi">
+                <h1>პოპულარული კურსები</h1>
+            </div>
+            <button class="btn2">
+                ყველა კურსის ნახვა
+            </button>
+        </div>
+        <section class="container1">
+            <div class="row">
+                <div class="col-3">
+                    <div class="card">
+                        <img class="card-image-top" src="src.img/content_management.jpeg">
+                        <div class="card-body">
+                            <h5>
+                                Content Management
+                            </h5>
+                            <p>კურსი განკუთვნილია მათთვის, ვისაც უნდა, რომ 0-დან ისწავლოს მონაცემთა მეცნიერება და შეძლოს ამის გამოყენება მიმდინარე ან ახალ საქმიანობაში.</p>
+                            <ul class="list2">
+                                <li class="leqcia">
+                                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                                     width="16" height="16"
+                                     viewBox="0 0 16 16"
+                                     style=" fill:#000000;"><path d="M 4.5 2 C 3.675781 2 3 2.675781 3 3.5 L 3 14.484375 L 8 10.820313 L 13 14.484375 L 13 3.5 C 13 2.675781 12.324219 2 11.5 2 Z M 4.5 3 L 11.5 3 C 11.78125 3 12 3.21875 12 3.5 L 12 12.515625 L 8 9.578125 L 4 12.515625 L 4 3.5 C 4 3.21875 4.21875 3 4.5 3 Z"></path></svg>
+                                    32 ლექცია
+                                </li>
+                                <li class="time">
+                                    <svg class="svg" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                                     width="16" height="16"
+                                     viewBox="0 0 16 16"
+                                     style=" fill:#000000;"><path d="M 7.5 1 C 3.917969 1 1 3.917969 1 7.5 C 1 11.082031 3.917969 14 7.5 14 C 11.082031 14 14 11.082031 14 7.5 C 14 3.917969 11.082031 1 7.5 1 Z M 7.5 2 C 10.542969 2 13 4.457031 13 7.5 C 13 10.542969 10.542969 13 7.5 13 C 4.457031 13 2 10.542969 2 7.5 C 2 4.457031 4.457031 2 7.5 2 Z M 7 3 L 7 8 L 10 8 L 10 7 L 8 7 L 8 3 Z"></path>
+                                    </svg>
+                                    96 საათი
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="image-container">
-                            <img src="src.img/html.png">
+                    <div class="card">
+                        <img class="card-image-top" src="src.img/DIGITAL-ADVESTING-COVERI-Recovered-1.png">
+                        <div class="card-body">
+                            <h5>
+                                Digital Advertising
+                            </h5>
+                            <p>კურსი განკუთვნილია მათთვის, ვისაც უნდა, რომ 0-დან ისწავლოს მონაცემთა მეცნიერება და შეძლოს ამის გამოყენება მიმდინარე ან ახალ საქმიანობაში.</p>
+                            <ul class="list2">
+                                <li class="leqcia">
+                                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                                     width="16" height="16"
+                                     viewBox="0 0 16 16"
+                                     style=" fill:#000000;"><path d="M 4.5 2 C 3.675781 2 3 2.675781 3 3.5 L 3 14.484375 L 8 10.820313 L 13 14.484375 L 13 3.5 C 13 2.675781 12.324219 2 11.5 2 Z M 4.5 3 L 11.5 3 C 11.78125 3 12 3.21875 12 3.5 L 12 12.515625 L 8 9.578125 L 4 12.515625 L 4 3.5 C 4 3.21875 4.21875 3 4.5 3 Z"></path></svg>
+                                    32 ლექცია
+                                </li>
+                                <li class="time">
+                                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                                     width="16" height="16"
+                                     viewBox="0 0 16 16"
+                                     style=" fill:#000000;"><path d="M 7.5 1 C 3.917969 1 1 3.917969 1 7.5 C 1 11.082031 3.917969 14 7.5 14 C 11.082031 14 14 11.082031 14 7.5 C 14 3.917969 11.082031 1 7.5 1 Z M 7.5 2 C 10.542969 2 13 4.457031 13 7.5 C 13 10.542969 10.542969 13 7.5 13 C 4.457031 13 2 10.542969 2 7.5 C 2 4.457031 4.457031 2 7.5 2 Z M 7 3 L 7 8 L 10 8 L 10 7 L 8 7 L 8 3 Z"></path>
+                                    </svg>
+                                    96 საათი
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="image-container">
-                            <img src="src.img/html.png">
+                    <div class="card">
+                        <img class="card-image-top" src="src.img/data_science-1.jpeg">
+                        <div class="card-body">
+                            <h5>
+                                Data Science
+                            </h5>
+                            <p>კურსი განკუთვნილია მათთვის, ვისაც უნდა, რომ 0-დან ისწავლოს მონაცემთა მეცნიერება და შეძლოს ამის გამოყენება მიმდინარე ან ახალ საქმიანობაში.</p>
+                            <ul class="list2">
+                                <li class="leqcia">
+                                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                                     width="16" height="16"
+                                     viewBox="0 0 16 16"
+                                     style=" fill:#000000;"><path d="M 4.5 2 C 3.675781 2 3 2.675781 3 3.5 L 3 14.484375 L 8 10.820313 L 13 14.484375 L 13 3.5 C 13 2.675781 12.324219 2 11.5 2 Z M 4.5 3 L 11.5 3 C 11.78125 3 12 3.21875 12 3.5 L 12 12.515625 L 8 9.578125 L 4 12.515625 L 4 3.5 C 4 3.21875 4.21875 3 4.5 3 Z"></path></svg>
+                                    32 ლექცია
+                                </li>
+                                <li class="time">
+                                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                                     width="16" height="16"
+                                     viewBox="0 0 16 16"
+                                     style=" fill:#000000;"><path d="M 7.5 1 C 3.917969 1 1 3.917969 1 7.5 C 1 11.082031 3.917969 14 7.5 14 C 11.082031 14 14 11.082031 14 7.5 C 14 3.917969 11.082031 1 7.5 1 Z M 7.5 2 C 10.542969 2 13 4.457031 13 7.5 C 13 10.542969 10.542969 13 7.5 13 C 4.457031 13 2 10.542969 2 7.5 C 2 4.457031 4.457031 2 7.5 2 Z M 7 3 L 7 8 L 10 8 L 10 7 L 8 7 L 8 3 Z"></path></svg>
+                                    96 საათი
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="image-container">
-                            <img src="src.img/html.png">
+                    <div class="card">
+                        <img class="card-image-top" src="src.img/Intro-to-Programming-with-C-Web-Cover-03.png">
+                        <div class="card-body">
+                            <h5>
+                                Intro to Programming with C Web
+                            </h5>
+                            <p>კურსი განკუთვნილია მათთვის, ვისაც უნდა, რომ 0-დან ისწავლოს მონაცემთა მეცნიერება და შეძლოს ამის გამოყენება მიმდინარე ან ახალ საქმიანობაში.</p>
+                            <ul class="list2">
+                                <li class="leqcia">
+                                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                                     width="16" height="16"
+                                     viewBox="0 0 16 16"
+                                     style=" fill:#000000;"><path d="M 4.5 2 C 3.675781 2 3 2.675781 3 3.5 L 3 14.484375 L 8 10.820313 L 13 14.484375 L 13 3.5 C 13 2.675781 12.324219 2 11.5 2 Z M 4.5 3 L 11.5 3 C 11.78125 3 12 3.21875 12 3.5 L 12 12.515625 L 8 9.578125 L 4 12.515625 L 4 3.5 C 4 3.21875 4.21875 3 4.5 3 Z"></path></svg> 
+                                    32 ლექცია
+                                </li>
+                                <li class="time">
+                                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                                     width="16" height="16"
+                                     viewBox="0 0 16 16"
+                                     style=" fill:#000000;"><path d="M 7.5 1 C 3.917969 1 1 3.917969 1 7.5 C 1 11.082031 3.917969 14 7.5 14 C 11.082031 14 14 11.082031 14 7.5 C 14 3.917969 11.082031 1 7.5 1 Z M 7.5 2 C 10.542969 2 13 4.457031 13 7.5 C 13 10.542969 10.542969 13 7.5 13 C 4.457031 13 2 10.542969 2 7.5 C 2 4.457031 4.457031 2 7.5 2 Z M 7 3 L 7 8 L 10 8 L 10 7 L 8 7 L 8 3 Z"></path></svg>
+                                    96 საათი
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </header>
-    <div>
-        <h1>
-            კონტაქტი
-        </h1>
-    </div>
-    <div class="input">
-        <input id="firstname" type="text" placeholder="სახელი*" name="firstname">
-    </div>
-    <div class="input">
-        <input id="lastname" type="text" placeholder="გვარი*" name="lastname">
-    </div>
-    <div class="input">
-        <input id="mail" type="text" placeholder="ელფოსტა*" name="mail">
-    </div>
-    <div class="input">
-        <input id="number" type="text" placeholder="ტელეფონის ნომერი*" name="number">
-    </div>
-    <div class="input">
-        <textarea name="contact" placeholder="რით შეგვიძლია დაგეხმაროთ?*"></textarea>
-    </div>
     <footer>
     <nav class="navigation">
         <ul class="list">
@@ -89,7 +169,5 @@
         </ul>
     </nav>
     </footer>
-    
-    
 </body>
 </html>
